objects/WaveUploadSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>EndTime__c</fullName>
        <label>EndTime</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExcludeWeekends__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ExcludeWeekends</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <label>Operation</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartTime__c</fullName>
        <label>StartTime</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Wave Upload Settings</label>
</CustomObject>